--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">LivDivine</string>
+    <string name="facebook_app_id">214512989613891</string>
+    <string name="fb_login_protocol_scheme">fb214512989613891</string>
 </resources>
